--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^11.0.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-magic-motion": "^1.1.2",
     "tailwindcss": "^3.4.3"
   }
 }
