--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "jest"
   },
   "dependencies": {
     "@astrojs/react": "^3.3.0",
@@ -24,5 +25,8 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-magic-motion": "^1.1.2",
     "tailwindcss": "^3.4.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
